--- a/index.html
+++ b/index.html
@@ -357,6 +357,6 @@
         </div>
       </div>
     </main>
-    <script type="module" src="/app.js"></script>
+    <script type="module" src="../random-password-generator/app.js"></script>
   </body>
 </html>
