--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/random-password-manager/style.css" />
+    <link rel="stylesheet" href="random-password-manager/style.css" />
   </head>
   <body>
     <main>
@@ -357,6 +357,6 @@
         </div>
       </div>
     </main>
-    <script type="module" src="../random-password-generator/app.js"></script>
+    <script type="module" src="random-password-generator/app.js"></script>
   </body>
 </html>
