--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./Password-Manager/random-password-manager/style.css" />
+    <link rel="stylesheet" href="/Password-Manager/random-password-manager/style.css" />
   </head>
   <body>
     <main>
